--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,90 @@
+anyio==3.7.1
 asgiref==3.6.0
+async-timeout==4.0.2
+attrs==23.1.0
+autobahn==23.1.2
+Automat==22.10.0
+beautifulsoup4==4.12.2
+Brotli==1.1.0
 certifi==2022.12.7
+cffi==1.15.1
+channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.1.0
 click==8.1.7
+cloudinary==1.38.0
 colorama==0.4.6
+constantly==15.1.0
+coverage==4.4.1
+cryptography==41.0.4
+daphne==4.0.0
+distlib==0.3.4
 dj-database-url==2.0.0
 Django==4.2.1
+django-appconf==1.0.5
 django-bmemcached==0.3.0
 django-cors-headers==3.14.0
+django-debug-toolbar==3.5.0
+django-dotenv==1.4.2
 django-environ==0.10.0
+django-extensions==3.2.3
+django-htmlmin==0.11.0
 django-rest-multiple-models==2.1.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+exceptiongroup==1.1.3
+filelock==3.6.0
 gunicorn==20.1.0
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+html5lib==1.1
+httptools==0.6.0
+hyperframe==6.0.1
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
+msgpack==1.0.5
+packaging==23.2
 Pillow==9.5.0
-psycopg2-binary==2.9.6
+platformdirs==2.5.1
+priority==1.3.0
+psycopg2-binary==2.9.9
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 PyJWT==2.6.0
+pyOpenSSL==23.2.0
 python-binary-memcached==0.31.2
+python-decouple==3.8
+python-dotenv==0.21.1
 pytz==2023.3
+PyYAML==6.0.1
+rcssmin==1.1.1
+redis==5.0.1
 requests==2.29.0
+rjsmin==1.2.1
+service-identity==21.1.0
+setuptools==69.0.3
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
 sqlparse==0.4.4
+tornado==6.2
+Twisted==22.10.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
 typing_extensions==4.7.1
 tzdata==2023.3
+tzlocal==5.0.1
 uhashring==2.3
 urllib3==1.26.15
 uvicorn==0.23.2
+virtualenv==20.14.0
+watchdog==3.0.0
+watchfiles==0.20.0
+webencodings==0.5.1
+websocket-client==1.6.1
+websockets==11.0.3
+whitenoise==6.6.0
+zope.interface==6.0
